# step-cli

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: release.yml
scripts/: release.sh
src/: auth.rs  cli.rs  config.rs  main.rs  setup.rs
src/chat/: approver.rs  asr.rs  client.rs  context.rs  executor.rs  mod.rs  session.rs  tokens.rs  tools.rs  vision.rs
src/runtime/: checkpoints.rs  jobs.rs  mod.rs
src/skills/: loader.rs
src/tools/: fs.rs  mcp.rs  mod.rs  shell.rs  web_search.rs
src/ui/: app.rs  events.rs  layout.rs  mod.rs
