[package]
name = "step-cli"
version = "0.1.13"
edition = "2021"
description = "A Rust CLI coding agent powered by StepFun models"
license = "MIT"
repository = "https://github.com/liangyj/step-cli"
keywords = ["stepfun", "cli", "ai", "agent", "llm"]
categories = ["command-line-utilities"]

[[bin]]
name = "step"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1.11"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "6.0"
futures-util = "0.3"
glob = "0.3"
ratatui = "0.29"
regex = "1.11"
similar = "2.7"
tiktoken-rs = "0.12"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "multipart",
    "native-tls",
    "http2",
    "cookies",
] }
rpassword = "7"
rustyline = "15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.9"
tracing = "0.1"
unicode-width = "0.2"
uuid = { version = "1.11", features = ["v4"] }
walkdir = "2"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.16"
wiremock = "0.6"
